# python-project-setup

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml
python_project_setup/crud/: __init__.py  tweets.py  users.py
python_project_setup/db/: connection.py
python_project_setup/migrations/: env.py
python_project_setup/models/: __init__.py  tweet.py  user.py
python_project_setup/schemas/: __init__.py  tweet.py  user.py
tests/: test_python_project_setup.py
